--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Quick Start - Leaflet</title>
+	<title>World Map</title>
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -65,6 +65,7 @@
 			.details-heading {
 				line-height: 0.1;
 			}
+
 	</style>
 
 </head>
@@ -328,17 +329,12 @@
 	}
 
 	function highlightState(layer) {
-    //layer = e.target;
 		layer.setStyle({
 			weight: 5,
 			color: '#81d4fa',
 			dashArray: '',
 			fillOpacity: 0.0
 		});
-
-		/*if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
-			layer.bringToFront();
-		}*/
 	}
 
 	function unselectState(state){
@@ -448,25 +444,6 @@
 		})
 	}
 
-	// Country Selection
-
-	/*var x = document.getElementById("countries");
-
-	var countries = new Set();
-
-	for (var i in states[0].features) {
-		var feature = states[0].features[i];
-
-		if(!countries.has(feature.properties.geonunit)){
-			var opt = document.createElement('option');
-			opt.value = feature.properties.geonunit;
-			opt.innerHTML = feature.properties.geonunit;
-			x.add(opt);
-
-			countries.add(feature.properties.geonunit);
-		}
-	}*/
-
 	// Quiz
 
 	var quizCountries;
@@ -487,8 +464,6 @@
 		generateQuestions();
 		nextQuestion();
 	}
-
-	var questionTypes = ["country-name", "country-population", "state-name", "city-name"];
 
 	var tasks;
 
